--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Boolean Academy</title>
         <!-- Fonts -->
         <link
@@ -12,7 +13,7 @@
         <link rel="stylesheet" href="./css/style.css" />
 
         <!-- Responsive Style -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/responsive.css">
     </head>
     <body>
         <!--
@@ -96,7 +97,7 @@
                             <div class="card">
                                 <img
                                     src="./img/code.svg"
-                                    alt="Ibizia subito a scrivere codice"
+                                    alt="Inizia subito a scrivere codice"
                                 />
                                 <h3 class="title">Programma</h3>
                                 <p class="text">
